# TimeEngine

./: .agentsrules  .clang-format  .gitignore  .gitmodules  CONTRIBUTING.md  GenerateProjectFiles.bat  Premake5.lua  README.md  ROADMAP.md  SECURITY.md  TimeEngine.sln  llms.md  llms.txt
.agents/: mcp.json
.agents/rules/: priority.md
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-macos-clang.yml  build-macos-gcc.yml.disabled  build-windows-clang.yml  build-windows-mingw.yml  build-windows-msvc.yml  clang-format.yml  labeler.yml  merge-safety.yml  rebase.yml  release.yml  stale.yml  sync-roadmap.yml
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/src/: Engine.h
Logger/Customizable_Logger/: CMakeLists.txt  Logger.vcxproj  Logger.vcxproj.filters
Logger/Customizable_Logger/Include/: CustomizableLogger.hpp  LoggerAPI.hpp
Logger/Customizable_Logger/Source/: CustomizableLogger.cpp
Resources/: TimeEngineResources.md
Resources/Assets/: README.md
Sandbox/: Client_TimeEngineLog.json  Core_TimeEngineLog.json  Sandbox.vcxproj  Sandbox.vcxproj.filters  SideScroller.vcxproj  imgui.ini  recent_projects.txt
Sandbox/src/: SandboxApplication.cpp
Scripts/: BuildCommercialRelease.bat  CleanProjectFiles.bat  GenerateProjectFiles.bat  MCP_Tools.sh  RegisterFileExtension.bat  SetupSubmodules.sh  parse_json.py
TimeEditor/: Client_TimeEngineLog.json  imgui.ini
TimeEngine/: TimeEngine.vcxproj  TimeEngine.vcxproj.filters
(+354 files in other folders)
